# paaster-cli

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  retype.yml  setup.py
.github/workflows/: codeql-analysis.yml  development.yml  production.yml  retype-action.yml
PaasterCLI/: __init__.py  encrypt.py  misc.py  storage.py
PaasterClient/: __init__.py  encrypt.py  misc.py  storage.py
docs/: readme.md
docs/.github/workflows/: retype-action.yml
paaster_cli/: __init__.py  storage.py
