[tool.poetry]
name = "paaster"
version = "1.1.8"
description = "Upload locally encrypted pastes from your terminal to Paaster"
authors = ["WardPearce <wardpearce@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "paaster_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
pyperclip = "^1.8.2"
pysodium = "^0.7.12"
requests = "^2.28.2"
click = "^8.1.3"

[tool.poetry.scripts]
paaster = "paaster_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
